--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 	<meta charset="utf-8">
 	<title>jCanvasの練習</title>
 	<script src="jquery-3.2.1.min.js"></script>
-  <script src='jcanvas.min.js'></script>
-
+  <script src='jcanvas.min.js'></script> 
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
   <textarea id="editor" rows="5" cols="40"></textarea>
